--- a/force-app/main/default/lwc/annualawards/annualawards.html
+++ b/force-app/main/default/lwc/annualawards/annualawards.html
@@ -38,6 +38,7 @@
                                         <lightning-layout multiple-rows="true">
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -62,6 +63,8 @@
                                         <lightning-layout multiple-rows="true">
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
+                                                
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -100,6 +103,7 @@
                                                 <!-- <lightning-input label="Primary Nominee" name="Primary Nominee" value={MP_PrimaryNominee}
                                                                                 onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -126,6 +130,7 @@
                                                 <!-- <lightning-input label="Secondary Nominee" value={MP_SecondaryNominee}
                                             name="Secondary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -163,6 +168,7 @@
                                                 <!-- <lightning-input label="Primary Nominee" name="PriComments" value={input1Value}
                                             onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -189,6 +195,7 @@
                                             name="Secondary Nominee" onchange={handleNomineeChange}>
                                         </lightning-input> -->
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -227,6 +234,7 @@
                                                 <!-- <lightning-input label="Primary Nominee" value={input1Value}
                                             name="Primary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -252,6 +260,7 @@
                                                 <!-- <lightning-input label="Secondary Nominee" value={input2Value}
                                             name="Secondary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -289,6 +298,7 @@
                                                 <!-- <lightning-input label="Primary Nominee" value={input1Value}
                                             name="Primary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -314,6 +324,7 @@
                                                 <!-- <lightning-input label="Secondary Nominee" value={input2Value}
                                             name="Secondary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -351,6 +362,7 @@
                                                 <!-- <lightning-input label="Primary Nominee" value={input1Value}
                                             name="Primary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -377,6 +389,7 @@
                                             name="Secondary Nominee" onchange={handleNomineeChange}>
                                         </lightning-input> -->
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -414,6 +427,7 @@
                                                 <!-- <lightning-input label="Primary Nominee" value={input1Value}
                                             name="Primary Nominee" onchange={handleNomineeChange}></lightning-input> -->
                                                 <c-reusable-lookup label="Primary Nominee"
+                                                title="Primary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
@@ -440,6 +454,7 @@
                                             name="Secondary Nominee" onchange={handleNomineeChange}>
                                         </lightning-input> -->
                                                 <c-reusable-lookup label="Secondary Nominee"
+                                                title="Secondary Nominee"
                                                     selected-icon-name="standard:contact" object-label="Contact"
                                                     object-api-name="Contact" field-api-name="Name"
                                                     other-field-api-name="EMS_RM_ApplicantStatus_Update__c"
