--- a/force-app/main/default/lwc/checkintable/checkintable.html
+++ b/force-app/main/default/lwc/checkintable/checkintable.html
@@ -86,11 +86,11 @@
                 <div class="c-container">
                  <lightning-layout vertical-align="start" class="slds-grid slds-wrap">
                     <lightning-layout-item size="6" class="slds-col slds-size_6-of-12" padding="around-small">
-                    <b> Goal Name: &nbsp;</b> <lightning-formatted-text value={wrapperdata.goalname}> </lightning-formatted-text><br/><br/>
+                    <b>Name: &nbsp;</b> <lightning-formatted-text value={wrapperdata.goalname}> </lightning-formatted-text><br/><br/>
                     <b>Comments : &nbsp;</b>  <lightning-formatted-rich-text value={wrapperdata.Comments}></lightning-formatted-rich-text>
                     </lightning-layout-item>
                     <lightning-layout-item size="6" class="slds-col slds-size_6-of-12" padding="around-small">
-                    <b> Check-in By:&nbsp;</b> <lightning-formatted-text value={wrapperdata.checkbyName}> </lightning-formatted-text> <br/><br/>
+                    <b> Check-In By:&nbsp;</b> <lightning-formatted-text value={wrapperdata.checkbyName}> </lightning-formatted-text> <br/><br/>
                      <b> Check In Date :&nbsp;</b> <lightning-formatted-date-time value={wrapperdata.CheckinDate}></lightning-formatted-date-time>
                      
                     </lightning-layout-item>
