--- a/force-app/main/default/lwc/pulseKraRecordFrom/pulseKraRecordFrom.html
+++ b/force-app/main/default/lwc/pulseKraRecordFrom/pulseKraRecordFrom.html
@@ -209,7 +209,7 @@
             <div class="slds-m-top_medium slds-m-bottom_x-large">
                 <div class="slds-p-around_medium lgc-bg slds-float_right ">
                     <lightning-button class="BtnSubmit" disabled={disableSubmitBtn} variant="brand"  label="Submit Review" onclick={handleSubmit}> </lightning-button>
-                    <lightning-button class="BtnCancle" variant="neutral"  label="Cancle" onclick={handleCancle}> </lightning-button>
+                    <lightning-button class="BtnCancle" variant="neutral"  label="Cancel" onclick={handleCancle}> </lightning-button>
                 </div>
             </div>
 
