--- a/force-app/main/default/lwc/shoutoutgiven/shoutoutgiven.html
+++ b/force-app/main/default/lwc/shoutoutgiven/shoutoutgiven.html
@@ -48,7 +48,7 @@
                 <div class="slds-wrap">{sout.spotType}</div>
               </td>
               <td>
-                <div class="slds-wrap"> <a href="#">{sout.projectName}</a></div>
+                <div class="slds-wrap"> <p>{sout.projectName}</p></div>
               </td>
               <td style="width:200px;word-wrap:break-word;">
                 <div class="slds-wrap"><lightning-formatted-rich-text
