--- a/force-app/main/default/lwc/recgiven/recgiven.html
+++ b/force-app/main/default/lwc/recgiven/recgiven.html
@@ -39,16 +39,16 @@
                   </div>
               </td>
               <td>
-                 <a href="javascript:void(0);" data-id={sout.resourceId}>
-                      {sout.resourceName}
-                    </a>
+                 <!--<a href="javascript:void(0);" data-id={sout.resourceId}></a>-->
+                     <p> {sout.resourceName}</p>
+                    
                   
               </td>
               <td>
                 <div class="slds-wrap">{sout.spotType}</div>
               </td>
               <td>
-                <div class="slds-wrap"> <a href="#">{sout.projectName}</a></div>
+                <div class="slds-wrap"><p> {sout.projectName}</p></div><!--<a href="#"></a>-->
               </td>
               <td style="width:200px;word-wrap:break-word;">
                 <div class="slds-wrap"><lightning-formatted-rich-text
