--- a/force-app/main/default/lwc/scroingaward/scroingaward.html
+++ b/force-app/main/default/lwc/scroingaward/scroingaward.html
@@ -71,7 +71,7 @@
                   </div>
                 </div>
               </td>
-              <td>
+              <td style="width:200px;word-wrap:break-word;">
                       {sout.currentFYName}
               </td>
               <td>
@@ -136,9 +136,9 @@
                <th class="slds-border_right tableheading" scope="col">
                 <div class="slds-truncate" title="Comments">Comments</div>
                </th>
-               <th class="slds-border_right tableheading" scope="col">
+               <!-- <th class="slds-border_right tableheading" scope="col">
                 <div class="slds-truncate" title="Actions">Actions</div>
-               </th>
+               </th> -->
             </tr>
           </thead>
     
@@ -201,9 +201,9 @@
                           <lightning-formatted-rich-text value={listItem.awardComments}></lightning-formatted-rich-text></div>
                         </template>
                     </td>
-                    <td>
-                      <!--Actions-->
-                    </td>
+                    <!--<td>
+                      Actions
+                    </td>-->
                   </tr>
                 </template>
             </template>
