--- a/force-app/main/default/lwc/annualawards/annualawards.html
+++ b/force-app/main/default/lwc/annualawards/annualawards.html
@@ -51,7 +51,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     name="PriComments" value={BE_PR_RR.Reason_for_award__c}
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -77,7 +77,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="secCom" label="Comments"
                                                     name="SecComments" value={BE_SE_RR.Reason_for_award__c}
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -116,7 +116,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={MP_PR_RR.Reason_for_award__c} name="PriComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -142,7 +142,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="secCom" label="Comments"
                                                     value={MP_SE_RR.Reason_for_award__c} name="SecComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -180,7 +180,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible label="Comments"
                                                     name="PriComments" value={RIS_PR_RR.Reason_for_award__c}
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -207,7 +207,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible label="Comments"
                                                     value={RIS_SE_RR.Reason_for_award__c} name="SecComments"
-                                                    onchange={handleCommentsChange}>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT">
                                                 </lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
@@ -246,7 +246,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={ROS_PR_RR.Reason_for_award__c} name="PriComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -272,7 +272,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="secCom" label="Comments"
                                                     value={ROS_SE_RR.Reason_for_award__c} name="SecComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -310,7 +310,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={SS_PR_RR.Reason_for_award__c} name="PriComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -336,7 +336,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={SS_SE_RR.Reason_for_award__c} name="SecComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -374,7 +374,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={GAB_PR_RR.Reason_for_award__c} name="PriComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -401,7 +401,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={GAB_SE_RR.Reason_for_award__c} name="SecComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -439,7 +439,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={AE_PR_RR.Reason_for_award__c} name="PriComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
@@ -466,7 +466,7 @@
                                             <lightning-layout-item padding="around-small" flexibility="auto" size="12">
                                                 <lightning-input-rich-text label-visible class="priCom" label="Comments"
                                                     value={AE_SE_RR.Reason_for_award__c} name="SecComments"
-                                                    onchange={handleCommentsChange}></lightning-input-rich-text>
+                                                    onchange={handleCommentsChange} disabled-categories="INSERT_CONTENT"></lightning-input-rich-text>
                                             </lightning-layout-item>
                                         </lightning-layout>
                                     </div>
