--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -161,7 +161,7 @@
             </div>
             <br>
             <footer class="section1">
-                <lightning-button variant="" label="Next" title="Primary action" onclick={handleNextAction} class="slds-var-m-left_x-small"></lightning-button>
+                <lightning-button variant="" label="Next" onclick={handleNextAction} class="slds-var-m-left_x-small"></lightning-button>
             </footer>
         </template>
         <!-- REVIEWER DETAILS SECTION-->
@@ -577,11 +577,11 @@
                         <lightning-layout-item size="12">
                             <lightning-layout multiple-rows>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Previous" title="Primary action" onclick={handlePreviousAction}
+                                    <lightning-button variant="" label="Previous" onclick={handlePreviousAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Next" title="Primary action" onclick={handleNextAction}
+                                    <lightning-button variant="" label="Next" onclick={handleNextAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
@@ -704,11 +704,11 @@
                         <lightning-layout-item size="12">
                             <lightning-layout multiple-rows>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Previous" title="Primary action" onclick={handlePreviousAction}
+                                    <lightning-button variant="" label="Previous" onclick={handlePreviousAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Next" title="Primary action" onclick={handleNextAction}
+                                    <lightning-button variant="" label="Next" onclick={handleNextAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
@@ -793,11 +793,11 @@
                         <lightning-layout-item size="12">
                             <lightning-layout multiple-rows>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Previous" title="Primary action" onclick={handlePreviousAction}
+                                    <lightning-button variant="" label="Previous" onclick={handlePreviousAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Next" title="Primary action" onclick={handleNextAction}
+                                    <lightning-button variant="" label="Next" onclick={handleNextAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
@@ -882,11 +882,11 @@
                         <lightning-layout-item size="12">
                             <lightning-layout multiple-rows>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Previous" title="Primary action" onclick={handlePreviousAction}
+                                    <lightning-button variant="" label="Previous" onclick={handlePreviousAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="6">
-                                    <lightning-button variant="" label="Next" title="Primary action" onclick={handleNextAction}
+                                    <lightning-button variant="" label="Next"  onclick={handleNextAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                             </lightning-layout>
@@ -1043,18 +1043,18 @@
                         <lightning-layout-item size="12">
                             <lightning-layout multiple-rows>
                                 <lightning-layout-item padding="around-small" size="4">
-                                    <lightning-button variant="" label="Previous" title="Primary action" onclick={handlePreviousAction}
+                                    <lightning-button variant="" label="Previous" onclick={handlePreviousAction}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
 
                                 <template lwc:if={showSaveSubmitButtonsVisibility}>
                                     <lightning-layout-item padding="around-small" size="4">
-                                        <lightning-button variant="brand" label="Save" title="Primary action" onclick={handleSaveAction}
+                                        <lightning-button variant="brand" label="Save"  onclick={handleSaveAction}
                                         disabled={isSaveBtnDisabled}
                                             class="slds-var-m-left_x-small"></lightning-button>
                                     </lightning-layout-item>
                                     <lightning-layout-item padding="around-small" size="4">
-                                        <lightning-button variant="success" label="Submit" title="Primary action" onclick={handleSubmitAction}
+                                        <lightning-button variant="success" label="Submit"  onclick={handleSubmitAction}
                                         disabled={isSubmitBtnDisabled}
                                         class="slds-var-m-left_x-small"></lightning-button>
                                     </lightning-layout-item>
