--- a/force-app/main/default/lwc/goalMetrics/goalMetrics.html
+++ b/force-app/main/default/lwc/goalMetrics/goalMetrics.html
@@ -39,14 +39,14 @@
                      </div>
                 </div>  
 
-                <div class="childparent2">
+                <!-- <div class="childparent2">
                     <div class="childimage2" >
                        <b> Compliance </b>
                     </div>
                     <div class="childtext2">
                        {numberofstricks} Strikes
                      </div>
-                </div>
+                </div> -->
 
                 <div class="childparent2">
                     <div class="childimage2" >
@@ -63,6 +63,7 @@
     <thead>
       <tr>
         <th>Goal ID</th>
+        <th>Start Date</th>
         <th>End Date</th>
         <th>Status</th>
       </tr>
@@ -70,7 +71,8 @@
     <tbody>
       <template for:each={goaldata} for:item="row">
         <tr key={row.id} tabindex="0"  onclick={handleRowClick} onkeydown={handleRowKeyDown}>
-          <td>{row.Name}</td>
+          <td>{row.Goal_Name__c}</td>
+          <td><lightning-formatted-date-time value={row.Start_Date__c}> </lightning-formatted-date-time></td>
           <td><lightning-formatted-date-time value={row.End_Date__c}> </lightning-formatted-date-time></td>
           <td>{row.Status__c}</td>
         </tr>
