--- a/force-app/main/default/lwc/goalMetrics/goalMetrics.html
+++ b/force-app/main/default/lwc/goalMetrics/goalMetrics.html
@@ -24,8 +24,10 @@
                     </div>
                     <div class="childtext2">
                          {numberofCompleted} Completed <br/>
-                         {numberofInprogress} In Progress <br/>
-                         {numberofMissed} Missed
+                         {numberofInprogress} In Active <br/>
+                         {numberofMissed} Missed <br/>
+                         {numberofDraft} Draft <br/>
+                         
                      </div>
                 
                 </div>   
@@ -62,7 +64,7 @@
   <center><div class="table-container"><table>
     <thead>
       <tr>
-        <th>Goal ID</th>
+        <th>Goal Name</th>
         <th>Start Date</th>
         <th>End Date</th>
         <th>Status</th>
