--- a/force-app/main/default/lwc/reusableLookup/reusableLookup.html
+++ b/force-app/main/default/lwc/reusableLookup/reusableLookup.html
@@ -4,7 +4,7 @@
             <div class="slds-combobox_container" if:false={isValueSelected}>
                 <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open">
                     <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none">
-                        <lightning-input onchange={handleChange} type="search" autocomplete="off" data-label={label}
+                        <lightning-input onchange={handleChange} type="search" autocomplete="off" label={label}
                             required={required} placeholder={placeholder}
                             onblur={handleInputBlur}></lightning-input>
                     </div>
