--- a/force-app/main/default/lwc/myMetrics/myMetrics.html
+++ b/force-app/main/default/lwc/myMetrics/myMetrics.html
@@ -63,7 +63,7 @@
 
 <template if:true={showkras}>
   <br/>
- <c-kratable tabledata={kratable}></c-kratable>
+ <c-kratable tabledata={kratable} tab="My Metric" ></c-kratable>
 </template>
 
 
