--- a/force-app/main/default/lwc/generatePerformanceKRA/generatePerformanceKRA.html
+++ b/force-app/main/default/lwc/generatePerformanceKRA/generatePerformanceKRA.html
@@ -350,7 +350,7 @@
                     <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-3">
                         <p><i></i></p> <br />
                         <div class="c-container">
-                            <c-showkragoals receivedkraid={selectedKraQuaterly}> </c-showkragoals>
+                            <c-showkragoals receivedkraid={selectedKraQuaterly} tab={tab} > </c-showkragoals>
                         </div>
                     </div>
 
