--- a/force-app/main/default/lwc/myteam/myteam.html
+++ b/force-app/main/default/lwc/myteam/myteam.html
@@ -149,7 +149,7 @@
 
          <!-- modal body start -->
          <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
-            <c-generate-performance-k-r-a fy={selectedfy} resource-id={resourceId} member={selectedresource} onclose={modalCloseHandler} ></c-generate-performance-k-r-a>
+            <c-generate-performance-k-r-a fy={selectedfy} resource-id={resourceId} member={selectedresource} onclose={modalCloseHandler} tab="My Team" ></c-generate-performance-k-r-a>
          </div>
 
          <!-- modal footer start
