--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -954,7 +954,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Technical Acumen">
-                                                <div class="slds-truncate">{kraRecord.Overall_Tech_Rating__c}</div>
+                                                <div class="slds-truncate">{kraRecord.Average_Tech_Rating__c}({kraRecord.Overall_Tech_Rating__c})</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -964,7 +964,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Professional Skills">
-                                                <div class="slds-truncate">{kraRecord.Overall_Professional_Rating__c}</div>
+                                                <div class="slds-truncate">{kraRecord.Average_Professional_Rating__c}({kraRecord.Overall_Professional_Rating__c})</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -974,7 +974,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Strategic Impact">
-                                                <div class="slds-truncate">{kraRecord.Overall_Strategic_Rating__c}</div>
+                                                <div class="slds-truncate">{kraRecord.Average_Strategic_Rating__c}({kraRecord.Overall_Strategic_Rating__c})</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
@@ -984,7 +984,7 @@
                                                 </div>
                                             </th>
                                             <td data-label="Goals & Results">
-                                                <div class="slds-truncate">{kraRecord.Overall_Goals_Results_Rating__c}</div>
+                                                <div class="slds-truncate">{kraRecord.Average_Goals_Results_Rating__c}({kraRecord.Overall_Goals_Results_Rating__c})</div>
                                             </td>
                                         </tr>
                                         <tr class="slds-hint-parent">
